# Wow-Admin

./: .gitignore
.github/workflows/: .gitignore  ci-next-iam.yml  docker-next-iam.yml
next-iam/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  justfile  recipe.json  rust-toolchain.toml
next-iam/.sqlx/: query-27bf526c96a7ad9613ed8a554011a298913d80e7da20a970cdcb2f8a5a5e2bbd.json
next-iam/app/: Cargo.toml
next-iam/app/src/: error.rs  lib.rs  main.rs  state.rs
next-iam/app/src/routes/: metrics.rs  mod.rs  users.rs
next-iam/config/: base.toml  local.toml
next-iam/domain/: Cargo.toml
next-iam/domain/src/: lib.rs
next-iam/infra/: Cargo.toml
next-iam/infra/src/: lib.rs
next-iam/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml
next-iam/k8s/overlays/dev/: kustomization.yaml
next-iam/migrations/: 20250915085734_init.sql  20250915090341_v1.0.sql
