[workspace]
members = ["app", "domain", "infra"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter","fmt","json"] }
tracing-error = "0.2"
config = "0.15.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
axum = { version = "0.8.4", features = ["macros","json"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace","cors","compression-full","request-id","util"] }
uuid = { version = "1", features = ["v4","serde"] }
time = { version = "0.3", features=["macros","serde"] }
# 可选：数据库（按需）
sqlx = { version = "0.8.2", features = ["runtime-tokio","macros","postgres","uuid","time","migrate"] }
# 可选：metrics
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = "symbols"   # 1.84+，自动剥离符号
