[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }
metrics = {workspace = true}
metrics-exporter-prometheus = {workspace = true}
tracing = { workspace = true }
domain = { path = "../domain" }
infra = { path = "../infra" }
